@@ -47,6 +47,7 @@ Version 1.5.1
 - BUG: TortoiseBlame didn't work if the merge paths had spaces. (Stefan)
 - BUG: Running a merge only for testing with an empty revision range
        did not set the range correctly. (Stefan)
+- BUG: The merge info text was off by one revision. (Stefan)
 
 Version 1.5.0
 - CHG: Support for IPv6 disabled due to problems with merging and terrible
